[gd_scene load_steps=3 format=2]

[ext_resource path="res://Misc/entity/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://pickable/pickable.gd" type="Script" id=2]

[node name="Pickable" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" parent="." index="0"]
editor/display_folded = true

[node name="RightHandlePosition" type="Position2D" parent="." index="1"]

[node name="LeftHandlePosition" type="Position2D" parent="." index="2"]

[node name="TeleportTimer" type="Timer" parent="." index="3"]
one_shot = true

